overflow correction

--- a/ENT/publications/cmultimedia/styleC.css
+++ b/ENT/publications/cmultimedia/styleC.css
@@ -52,6 +52,7 @@
   font-size: 2em;
   margin: 5px;
   text-align: center;
+  overflow : auto;
 }
 
 .Copybook {
